[gd_scene load_steps=61 format=2]

[ext_resource path="res://assets/Enemies/Goblin/Take Hit.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/Goblin/Attack.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies/Goblin/Run.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies/Goblin/Idle.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies/Goblin/Death.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies/Goblin/Attack2.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies/Goblin/Attack3.png" type="Texture" id=7]
[ext_resource path="res://src/Actors/Enemy/Goblin.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 7 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 7 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 7 )
region = Rect2( 1200, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 7 )
region = Rect2( 1350, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 1500, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 1650, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 6 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 6 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 6 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 750, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 150, 150 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 450, 0, 150, 150 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "attack3",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "take_hint",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 10, 18.5 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 7.5, 16 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 8, 17.5 )

[node name="Goblin" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 2
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 29 )
animation = "run"
speed_scale = 2.0
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.5 )
shape = SubResource( 50 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -55, -11 )

[node name="TimerBomb" type="Timer" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="DetectorNearBorder" type="RayCast2D" parent="."]
position = Vector2( -35, -2 )
enabled = true
collision_mask = 2

[node name="StomArea" type="Area2D" parent="."]

[node name="StompCollision" type="CollisionShape2D" parent="StomArea"]
position = Vector2( -3.5, 6 )
shape = SubResource( 51 )

[node name="CollisionEnemyAre" type="Area2D" parent="."]

[node name="CollisionEnemy" type="CollisionShape2D" parent="CollisionEnemyAre"]
position = Vector2( -2, 7.5 )
shape = SubResource( 52 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="TimerBomb" to="." method="_on_TimerBomb_timeout"]
[connection signal="area_entered" from="StomArea" to="." method="_on_StomArea_area_entered"]
[connection signal="body_entered" from="CollisionEnemyAre" to="." method="_on_CollisionEnemyAre_body_entered"]
